test/fail/not-static.mo
import "lib/not-static.mo"
